@@ -17,14 +17,8 @@ public class UsuarioService {
     }
 
     public List<UsuarioDTO> listar() {
-        return repository.listar().stream()
-                .map(u -> {
-                    UsuarioDTO dto = new UsuarioDTO();
-                    dto.setId(u.getId());
-                    dto.setNombre(u.getNombre());
-                    dto.setCorreo(u.getCorreo());
-                    return dto;
-                })
-                .collect(Collectors.toList());
+        return repository.findAll().stream() // Usa findAll() aquí
+                .map(u -> new UsuarioDTO(u.getId(), u.getNombre(), u.getCorreo()))
+                .toList();
     }
 }
